<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_price_label"
        style="@style/Widget.Inventory.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_rub_value"
        android:textColorHint="#25aa77"
        app:layout_constraintBottom_toTopOf="@+id/mark"
        app:layout_constraintEnd_toEndOf="@+id/mark"
        app:layout_constraintStart_toStartOf="@+id/mark"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="@string/rubles"
        app:suffixTextColor="#546e7a">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_of_rub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="#546e7a" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/target_value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="#25aa77"
        android:hint="@string/select_target_currency_name"
        android:textColorHint="#25aa77"
        app:layout_constraintEnd_toEndOf="@+id/mark"
        app:layout_constraintStart_toStartOf="@+id/mark"
        app:layout_constraintTop_toBottomOf="@+id/item_price_label"
        app:suffixTextColor="#546e7a">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/field_of_target_valute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:focusableInTouchMode="true"
            android:textColor="#546e7a" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/target_value"
        app:layout_constraintStart_toStartOf="@+id/target_value"
        app:layout_constraintTop_toBottomOf="@+id/target_value">

        <TextView
            android:id="@+id/result_value"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="bottom"
            android:text="@string/result"
            android:textColor="#90a4ae"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/result_value_show"
            style="@style/toResult"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="bottom"
            android:textColor="#546e7a">

        </TextView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/convert_button"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="#25aa77"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mark">

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/convert"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>